2001-01-27  Dekel Tsur  <dekelts@tau.ac.il>

	* ui/default.ui: Add Edit->Bookmarks menu.

2001-01-26  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>

	* ui/default.ui: change "Insert>Figure" to "Insert>Graphics",
	shorten Insert>Floats>" entries.

2001-01-26  Volodymyr M . Lisivka  <lvm_ukr@yahoo.com>

	* kbd/koi8-u.kmap: new file.

	* encodings: add koi-8u encoding.

	* languages: update ukrainian entry

2001-01-26  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>

	* CREDITS: update Tino Meinen address.

2001-01-25  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>

	* examples/fr_ItemizeBullets.lyx: new translation.

	* examples/fr_splash.lyx: 
	* examples/fr_exemple_lyxifie.lyx: 
	* examples/fr_exemple_brut.lyx: updated.

	* bind/cua.bind: change C-k from font-noun to line-delete-forward.

2001-01-24  Dekel Tsur  <dekelts@tau.ac.il>

	* configure.m4: Add a check for dvipdfm.

2001-01-24  John Levon  <moz@compsoc.man.ac.uk>

 	* Makefile.am: make configure and configure.cmd installed
 	  by hand, to avoid name changes when --with-lyx-suffix
 	  is used.
 
 	* configure:
 	* configure.m4: support --with-lyx-suffix for the lyxrc.defaults
	  reLyX and noweb2lyx scripts
 
	* reLyX/configure.in: support --with-lyx-suffix

2001-01-23  Dekel Tsur  <dekelts@tau.ac.il>

	* ui/default.ui: Add Navigate->Refs

2001-01-22  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>

	* images/banner.xpm: revert to the cucumberless banner.

2001-01-20  Dekel Tsur  <dekelts@tau.ac.il>

	* languages: Add extra_options field. It is used to fix the ~n
        problem with Spanish.