@@ -1,3 +1,7 @@
+2001-01-28  Dekel Tsur  <dekelts@tau.ac.il>
+
+	* ui/default.ui: Move the Bookmarks submenu to the Navigate menu.
+
 2001-01-27  Dekel Tsur  <dekelts@tau.ac.il>
 
 	* ui/default.ui: Add Edit->Bookmarks menu.
